--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,2 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap');
 @import "tailwindcss";
+@import '@fontsource/karla';
+@import '@fontsource/montserrat';
