--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 @import '@fontsource/karla';
 @import '@fontsource/montserrat';
+
+.font-karla {
+    font-family: 'Karla', sans-serif;
+}
